; ModuleID = '/home/carl/AnghaBench/linux/lib/extr_btree.c_btree_last.c'
source_filename = "/home/carl/AnghaBench/linux/lib/extr_btree.c_btree_last.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.btree_head = type { i32, i64* }
%struct.btree_geo = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @btree_last(%struct.btree_head* %0, %struct.btree_geo* %1, i64* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca %struct.btree_head*, align 8
  %6 = alloca %struct.btree_geo*, align 8
  %7 = alloca i64*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i64*, align 8
  store %struct.btree_head* %0, %struct.btree_head** %5, align 8
  store %struct.btree_geo* %1, %struct.btree_geo** %6, align 8
  store i64* %2, i64** %7, align 8
  %10 = load %struct.btree_head*, %struct.btree_head** %5, align 8
  %11 = getelementptr inbounds %struct.btree_head, %struct.btree_head* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 8
  store i32 %12, i32* %8, align 4
  %13 = load %struct.btree_head*, %struct.btree_head** %5, align 8
  %14 = getelementptr inbounds %struct.btree_head, %struct.btree_head* %13, i32 0, i32 1
  %15 = load i64*, i64** %14, align 8
  store i64* %15, i64** %9, align 8
  %16 = load i32, i32* %8, align 4
  %17 = icmp eq i32 %16, 0
  br i1 %17, label %18, label %19

18:                                               ; preds = %3
  store i8* null, i8** %4, align 8
  br label %43

19:                                               ; preds = %3
  br label %20

20:                                               ; preds = %28, %19
  %21 = load i32, i32* %8, align 4
  %22 = icmp sgt i32 %21, 1
  br i1 %22, label %23, label %31

23:                                               ; preds = %20
  %24 = load %struct.btree_geo*, %struct.btree_geo** %6, align 8
  %25 = load i64*, i64** %9, align 8
  %26 = call i8* @bval(%struct.btree_geo* %24, i64* %25, i32 0)
  %27 = bitcast i8* %26 to i64*
  store i64* %27, i64** %9, align 8
  br label %28

28:                                               ; preds = %23
  %29 = load i32, i32* %8, align 4
  %30 = add nsw i32 %29, -1
  store i32 %30, i32* %8, align 4
  br label %20

31:                                               ; preds = %20
  %32 = load i64*, i64** %7, align 8
  %33 = load %struct.btree_geo*, %struct.btree_geo** %6, align 8
  %34 = load i64*, i64** %9, align 8
  %35 = call i32 @bkey(%struct.btree_geo* %33, i64* %34, i32 0)
  %36 = load %struct.btree_geo*, %struct.btree_geo** %6, align 8
  %37 = getelementptr inbounds %struct.btree_geo, %struct.btree_geo* %36, i32 0, i32 0
  %38 = load i32, i32* %37, align 4
  %39 = call i32 @longcpy(i64* %32, i32 %35, i32 %38)
  %40 = load %struct.btree_geo*, %struct.btree_geo** %6, align 8
  %41 = load i64*, i64** %9, align 8
  %42 = call i8* @bval(%struct.btree_geo* %40, i64* %41, i32 0)
  store i8* %42, i8** %4, align 8
  br label %43

43:                                               ; preds = %31, %18
  %44 = load i8*, i8** %4, align 8
  ret i8* %44
}

declare dso_local i8* @bval(%struct.btree_geo*, i64*, i32) #1

declare dso_local i32 @longcpy(i64*, i32, i32) #1

declare dso_local i32 @bkey(%struct.btree_geo*, i64*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
